k8s/base/infrastructure/nrdot-collector-mssql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nrdot-collector-mssql
  namespace: relibank
  labels:
    app: nrdot-collector-mssql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nrdot-collector-mssql
  template:
    metadata:
      labels:
        app: nrdot-collector-mssql
    spec:
      containers:
      - name: nrdot-collector-mssql
        image: nrdot-collector-mssql
        imagePullPolicy: IfNotPresent
        command:
          - nrdot-collector
          - --config=/etc/otelcol/config.yaml
          - --config=/etc/otelcol/internal-telemetry-config.yaml
        volumeMounts:
        - name: nrdot-collector-mssql-config
          mountPath: /etc/otelcol/config.yaml
          subPath: config.yaml
          readOnly: true
        - name: internal-telemetry-config
          mountPath: /etc/otelcol/internal-telemetry-config.yaml
          subPath: internal-telemetry-config.yaml
          readOnly: true
      volumes:
      - name: nrdot-collector-mssql-config
        configMap:
          name: nrdot-collector-mssql-config
          items:
          - key: config.yaml
            path: config.yaml
      - name: internal-telemetry-config
        configMap:
          name: internal-telemetry-config
          items:
          - key: internal-telemetry-config.yaml
            path: internal-telemetry-config.yaml
      restartPolicy: Always
