k8s/base/infrastructure/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka
  name: kafka
  namespace: relibank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - env:
            - name: ALLOW_PLAINTEXT_LISTENER
              value: "yes"
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_CFG_ADVERTISED_LISTENERS
              value: PLAINTEXT://kafka:29092,EXTERNAL://localhost:9092
            - name: KAFKA_CFG_LISTENERS
              value: PLAINTEXT://:29092,EXTERNAL://:9092
            - name: KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP
              value: PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
            - name: KAFKA_CFG_ZOOKEEPER_CONNECT
              value: zookeeper:2181
            - name: KAFKA_ENABLE_KRAFT
              value: "no"
            - name: KAFKA_JMX_PORT
              value: "9999"
          image: kafka-with-monitoring
          livenessProbe:
            exec:
              command:
                - kafka-topics.sh
                - --bootstrap-server
                - localhost:9092
                - --list
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: kafka
          ports:
            - containerPort: 9092
              protocol: TCP
            - containerPort: 9999
              name: jmx
              protocol: TCP
      hostname: kafka
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
  name: kafka
  namespace: relibank
spec:
  ports:
  - name: "9092"
    port: 9092
    targetPort: 9092
  - name: "29092"
    port: 29092
    targetPort: 29092
  - name: jmx
    port: 9999
    targetPort: 9999
  selector:
    app: kafka
