k8s/base/infrastructure/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
  name: kafka
  namespace: relibank
spec:
  ports:
  - name: "9092"
    port: 9092
    targetPort: 9092
  - name: "29092"
    port: 29092
    targetPort: 29092
  selector:
    app: kafka
