k8s/base/infrastructure/zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zookeeper
  name: zookeeper
  namespace: relibank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - env:
            - name: ALLOW_ANONYMOUS_LOGIN
              value: "yes"
            - name: ZOO_MY_ID
              value: "1"
          image: bitnamilegacy/zookeeper:3.8
          name: zookeeper
          ports:
            - containerPort: 2181
              protocol: TCP
      hostname: zookeeper
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper
  name: zookeeper
  namespace: relibank
spec:
  ports:
  - name: "2181"
    port: 2181
    targetPort: 2181
  selector:
    app: zookeeper
